c-lightning/c-lightning.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: c-lightning
  labels:
    app: c-lightning
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: c-lightning
  template:
    metadata:
      labels:
        app: c-lightning
    spec:
      containers:
        - name: c-lightning
          image: elementsproject/lightningd:latest
          args:
            - --bitcoin-rpcconnect=bitcoind
            - --bitcoin-rpcuser=$(BITCOIN_RPC_USER)
            - --bitcoin-rpcpassword=$(BITCOIN_RPC_PASSWORD)
            - --network=bitcoin
            - --alias=WooCommerce POS
            - --rgb=008000
            - --log-level=debug
          ports:
            - containerPort: 9735
              name: c-lightning
          volumeMounts:
            - name: c-lightning-data
              mountPath: /root/.lightning
      volumes:
        - name: c-lightning-data
          persistentVolumeClaim:
            claimName: c-lightning-pv-claim
