c-lightning/c-lightning-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: c-lightning
  labels:
    app: c-lightning
spec:
  type: NodePort
  ports:
    - port: 9735
      name: c-lightning
  selector:
    app: c-lightning
