c-lightning/lightning-charge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lightning-charge
  labels:
    app: lightning-charge
spec:
  type: NodePort
  ports:
    - port: 9112
      name: charge-api
  selector:
    app: lightning-charge
